fixed covering chats components in mobile view

--- a/src/components/AddUser.scss
+++ b/src/components/AddUser.scss
@@ -1,6 +1,6 @@
 .addUser {
-  border: 1px solid red;
   position: fixed;
-  bottom: 0;
 
+  bottom: 0;
+  right: 0;
 }
